# model-gateway-rs

./: .gitignore  Cargo.toml  README.md  VISION_CLIENT_USAGE.md  a.json
examples/: chat_completions.rs  ollama_http.rs  vision_example.rs
src/: error.rs  lib.rs
src/clients/: llm.rs  mod.rs  openai.rs  vision.rs
src/llm/: chat_completions.rs  mod.rs  ollama.rs  openai.rs
src/model/: doubao_vision.rs  llm.rs  mod.rs  ollama.rs  openai.rs  role.rs  vision.rs
src/sdk/: doubao_vision.rs  mod.rs  ollama.rs  openai.rs
src/traits/: core.rs  mod.rs  text.rs  vision.rs
src/types/: mod.rs  text.rs  vision.rs
